--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass --watch assets/scss/main.scss:assets/css/style.css"
+    "compile:sass": "sass --watch assets/scss/main.scss:assets/css/style.css",
+    "compile:cleancss": "cleancss -o assets/css/style.min.css assets/css/style.css"
+
   },
   "author": "",
   "license": "ISC",
